tests/cases/scc/error/0013-macro.c
//!necc-dbg @ -as
#define X(A, ...) 0

X()

